# agentwatch

./: .gitignore  README.md  llms.txt
.github/workflows/: publish.yml
extension/: content.js  manifest.json  overlay.css  popup.html
sdk-python/: README.md  pyproject.toml
sdk-python/src/agentwatch/: __init__.py  sdk.py
