[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwatcher"
version = "0.1.0"
description = "DevTools overlay for browser-based AI agents — see what your agent is doing in real time."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "yubinkim444" }]
keywords = ["browser-agent", "playwright", "selenium", "browser-use", "ai-agents", "debugging", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/yubinkim444/agentwatch"
Repository = "https://github.com/yubinkim444/agentwatch"
Issues = "https://github.com/yubinkim444/agentwatch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentwatch"]
